[metadata]
name = ubmrella
version = 12.0.0
summary = OpenStack Monitor and Billing Service
description-file =
    README.rst
author = xiongwenwu
author-email = xiongwenwu1997@126.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[entry_points]
console_scripts =
    umbrella-api = umbrella.cmd.api:main
    umbrella-collector = umbrella.cmd.collector:main
    umbrella-manage = umbrella.cmd.manage:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

#[egg_info]
#tag_build =
#tag_date = 0
#tag_svn_revision = 0

